feat: add version columns to members and projects, implement project and member services, and enhance exception handling